{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 39,
  "lineage": "fc628a9c-c2ea-63c8-dc81-99ae5e2ee788",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555012476084:vpc/vpc-0accb8a0cc02a9df1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cf5245e8fcab0bb4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-098f606643964c6f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0accb8a0cc02a9df1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04690b2629c344646",
            "owner_id": "555012476084",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8",
            "arn_suffix": "app/webservers-prod-alb/c11ae0023c5e56d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-prod-alb-285007977.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-prod-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01d274b0c88d2ec3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fdecf356641d1ea"
              },
              {
                "subnet_id": "subnet-05aab5ac5486ae08e"
              },
              {
                "subnet_id": "subnet-06574c71c936f8c30"
              },
              {
                "subnet_id": "subnet-09627895ea12e2eac"
              },
              {
                "subnet_id": "subnet-0e419212828693c0e"
              },
              {
                "subnet_id": "subnet-0e97be930e738d1a9"
              }
            ],
            "subnets": [
              "subnet-00fdecf356641d1ea",
              "subnet-05aab5ac5486ae08e",
              "subnet-06574c71c936f8c30",
              "subnet-09627895ea12e2eac",
              "subnet-0e419212828693c0e",
              "subnet-0e97be930e738d1a9"
            ],
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-alb",
              "Owner": "platform-team"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-alb",
              "Owner": "platform-team"
            },
            "vpc_id": "vpc-0accb8a0cc02a9df1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.data.aws_subnets.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-tg/b2eb894c0c06a90c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960"
          },
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_lb_target_group.asg",
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.data.aws_subnets.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "blue_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-blue-tg/a08fcb62045304f6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener-rule/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960/62168c6fa24b48d4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener-rule/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960/62168c6fa24b48d4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960",
            "priority": 100,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:listener-rule/app/webservers-prod-alb/c11ae0023c5e56d8/e036c8a9755d6960/62168c6fa24b48d4"
          },
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_lb_listener.http",
            "module.webserver_cluster.aws_lb_target_group.asg",
            "module.webserver_cluster.aws_lb_target_group.blue",
            "module.webserver_cluster.aws_lb_target_group.green",
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.data.aws_subnets.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-tg/b2eb894c0c06a90c",
            "arn_suffix": "targetgroup/webservers-prod-tg/b2eb894c0c06a90c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-tg/b2eb894c0c06a90c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webservers-prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0accb8a0cc02a9df1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-tg/b2eb894c0c06a90c"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-blue-tg/a08fcb62045304f6",
            "arn_suffix": "targetgroup/webservers-prod-blue-tg/a08fcb62045304f6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-blue-tg/a08fcb62045304f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:555012476084:loadbalancer/app/webservers-prod-alb/c11ae0023c5e56d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webservers-prod-blue-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Slot": "blue"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Slot": "blue"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0accb8a0cc02a9df1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-blue-tg/a08fcb62045304f6"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-green-tg/79db82aa5186c68a",
            "arn_suffix": "targetgroup/webservers-prod-green-tg/79db82aa5186c68a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-green-tg/79db82aa5186c68a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webservers-prod-green-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Slot": "green"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Slot": "green"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0accb8a0cc02a9df1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555012476084:targetgroup/webservers-prod-green-tg/79db82aa5186c68a"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555012476084:security-group/sg-01d274b0c88d2ec3e",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d274b0c88d2ec3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "555012476084",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-alb-sg",
              "Owner": "platform-team"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-alb-sg",
              "Owner": "platform-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0accb8a0cc02a9df1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555012476084",
            "id": "sg-01d274b0c88d2ec3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555012476084:security-group/sg-02949f4d3a6f05ec1",
            "description": "Instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02949f4d3a6f05ec1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d274b0c88d2ec3e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webservers-prod-web-sg",
            "name_prefix": "",
            "owner_id": "555012476084",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-web-sg",
              "Owner": "platform-team"
            },
            "tags_all": {
              "Cluster": "webservers-prod",
              "CostCenter": "prod-001",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "webservers-prod-web-sg",
              "Owner": "platform-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0accb8a0cc02a9df1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555012476084",
            "id": "sg-02949f4d3a6f05ec1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-420796008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01d274b0c88d2ec3e",
            "security_group_rule_id": "sgr-0c67f16693501272b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3541251629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-01d274b0c88d2ec3e",
            "security_group_rule_id": "sgr-00c1712ba74e60243",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_in_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1914378164",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02949f4d3a6f05ec1",
            "security_group_rule_id": "sgr-086de2fa407f94ef7",
            "self": false,
            "source_security_group_id": "sg-01d274b0c88d2ec3e",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.aws_security_group.web_sg",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-233718122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-02949f4d3a6f05ec1",
            "security_group_rule_id": "sgr-04708a711fef1e84e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver_cluster.aws_security_group.web_sg",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}